Исправление проблем с вёрсткой в главе про хеш-функции

--- a/_settings.tex
+++ b/_settings.tex
@@ -203,3 +203,5 @@ number = {\textnumero}%
 \binoppenalty=9999
 \relpenalty=9999
 
+% Упрощение ввода некоторых иностранных слов
+\newcommand{\blockchain}{\foreignlanguage{english}{block\-chain}}
