--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1425,7 +1425,7 @@
 
 @book{Pogorelov:Sachkov:2006,
     title       = {Словарь криптографических терминов},
-    editor      = {Погорелов, В. А. and Сачков В. Н.},
+    editor      = {Погорелов, В. А. and Сачков, В. Н.},
     address     = {Москва},
     year        = {2006},
     publisher   = {Издательство МЦНМО},
