--- a/hash-functions/GOST_R_34.11-2012.tex
+++ b/hash-functions/GOST_R_34.11-2012.tex
@@ -1,14 +1,14 @@
 \section{Хэш-функция «Стрибог»}\label{section-stribog}\index{хэш-функция!Стрибог|(}
 \selectlanguage{russian}
 
-С 1 января 2013 года в России введён в действие новый стандарт на криптографическую хэш-функцию ГОСТ Р 34.11-2012~\cite{GOST-R:34.11-2012}. Неофициально новый алгоритм получил название <<Стрибог>>. При разработке хэш-функции авторы основывались на нескольких требованиях:
+С 1 января 2013 года в России введён в действие обновлённый стандарт на криптографическую хэш-функцию ГОСТ~Р~34.11-2012 \cite{GOST-R:34.11-2012}. Неофициально новый алгоритм получил название <<Стрибог>>. При разработке хэш-функции авторы основывались на нескольких требованиях:
 
 \begin{itemize}
 	\item отсутствие уязвимостей к известным атакам;
 	\item использование только хорошо изученных конструкций и преобразований;
-	\item отсутствие лишних преобразований (каждое преобразование должно гарантировать выполнение определённых криптографических свойств);
+	\item отсутствие лишних действий (каждое преобразование должно гарантировать выполнение определённых криптографических свойств);
 	\item при наличии нескольких вариантов реализации требуемого свойства -- использование наиболее простого для анализа и реализации;
-	\item максимальная производительность \emph{программной} реализации.
+	\item максимальная производительность \emph{программной} реализации (процессоры архитектуры \texttt{x64}).
 \end{itemize}
 
 В соответствии с данными требованиями алгоритм новой хэш-функции основывается на хорошо изученных конструкциях Меркла~---~Дамгарда\index{структура!Меркла~---~Дамгарда}~\cite{Merkle:1979, Merkle:1990, Damgard:1990} и Миагучи~---~Пренеля\index{структура!Миагучи~---~Пренеля}~\cite{Espen:Mieghem:1989, Miyaguchi:Ohta:Iwata:1990:03, Miyaguchi:Ohta:Iwata:1990:11}, во внешней своей структуре практически полностью повторяя режим HAIFA\index{HAIFA} (\langen{HAsh Iterative FrAmework},~\cite{Biham:Dunkelman:2007}), использовавшийся в хэш-функциях SHAvite-3\index{хэш-функция!SHAvite-3} и BLAKE\index{хэш-функция!BLAKE}.
