--- a/hash-functions/index.tex
+++ b/hash-functions/index.tex
@@ -31,7 +31,7 @@
     \item минимальное число коллизий.
 \end{itemize}
 
-Можно назвать и другие свойства, которые были бы полезны для хэш-функции в программировании. К ним можно отнести, например, отсутствие необходимости в дополнительной памяти (неиспользование <<кучи>>), простоту реализации, стабильность работы алгоритма (возврат одного и того же результата после перезапуска программы), соответствие результатов работы хэш-функции результатам работы других функций, например, функций сравнения (см. например, описания функций \texttt{hashcode()}, \texttt{equals()} и \texttt{compare()} в языке программирования Java).
+\begin{sloppypar}Можно назвать и другие свойства, которые были бы полезны для хэш-функции в программировании. К ним можно отнести, например, отсутствие необходимости в дополнительной памяти (неиспользование <<кучи>>), простоту реализации, стабильность работы алгоритма (возврат одного и того же результата после перезапуска программы), соответствие результатов работы хэш-функции результатам работы других функций, например, функций сравнения (см. например, описания функций \texttt{hashcode()}, \texttt{equals()} и \texttt{compare()} в языке программирования Java).\end{sloppypar}
 
 \emph{Однонаправленной функцией}\index{функция!однонаправленная} $f(x)$ называется функция, обладающая следующими свойствами:
 \begin{itemize}
@@ -48,7 +48,7 @@
     \item \emph{сильная устойчивость к коллизиям} (сильно бесконфликтная функция): \emph{вычислительно невозможно} найти пару разных аргументов $x \neq y: ~ H(x) = H(y)$.
 \end{itemize}
 
-Из требования на устойчивость к коллизиям, в частности, следует свойство (близости к) равномерности распределения хэш-значений.
+Из требования на устойчивость к коллизиям, в частности, следует свойство (близости к) равномерности распределения результата криптографической хэш-функции по области значений. В целом надёжную криптографическую хэш-функ\-цию можно считать реализацией \emph{класса псевдослучайных функций} (PRF), то есть \emph{случайным оракулом}\index{оракул!случайный}.
 
 При произвольной длине последовательности $X$ длина хэш-функции $H(X)$ в российском стандарте ГОСТ Р 34.11-94 равна 256 символам, в американском стандарте SHA несколько различных значений длин: 160, 192, 256, 512 символов.
 
