--- a/hash-functions/mac/hmac.tex
+++ b/hash-functions/mac/hmac.tex
@@ -1,9 +1,9 @@
 \subsection{HMAC}\label{section:hmac}
 \selectlanguage{russian}
 
-Наиболее универсальный способ аутентификации сообщений через схемы ЭП на криптосистемах с открытым ключом состоит в том, что сторона $A$ отправляет стороне $B$ сообщение
-    \[ m ~\|~ \textrm{ЭП}(K, h(m)), \]
-где $h(m)$ -- криптографическая хэш-функция в схеме ЭП и $\|$ является операцией конкатенации битовых строк. Для аутентификации большого объёма информации этот способ не подходит из-за медленной операции вычисления подписи. Например, вычисление одной ЭП на криптосистемах с открытым ключом занимает порядка 10 мс на ПК. При средней длине IP-пакета 1 Кбайт, для каждого из которых требуется вычислить имитовставку, получим максимальную пропускную способность в $\frac{1 ~ \text{Кбайт}}{10 ~ \text{мс}} = 100$ Кбайт/с.
+Наиболее универсальный способ аутентификации сообщений с использованием схем ЭЦП на криптосистемах с открытым ключом состоит в том, что сторона $A$ отправляет стороне $B$ сообщение
+    \[ m ~\|~ \textrm{ЭЦП}(K, h(m)), \]
+где $h(m)$ -- криптографическая хэш-функция в схеме ЭП и $\|$ является операцией конкатенации битовых строк. Для аутентификации большого объёма информации этот способ не подходит из-за медленной операции вычисления подписи. Например, вычисление одной ЭЦП на криптосистемах с открытым ключом занимает порядка 10 мс на ПК. При средней длине IP-пакета 1 Кбайт, для каждого из которых требуется вычислить имитовставку, получим максимальную пропускную способность в $\frac{1 ~ \text{Кбайт}}{10 ~ \text{мс}} = 100$ Кбайт/с.
 
 Поэтому для большого объёма данных, которые нужно аутентифицировать, $A$ и $B$ создают общий секретный ключ аутентификации $K$. Далее имитовставка вычисляется либо с помощью модификации блочного шифра, либо с помощью криптографической хэш-функции.
 
@@ -27,7 +27,7 @@
     \[ \MAC(K, m) = E_K(H(m)), \]
 где $H$ -- криптографическая хэш-функция.
 
-Имитовставка на основе хэш-функции обозначается $\HMAC$ (Hash-based MAC)\index{HMAC} и стандартно вычисляется в виде:
+Имитовставка на основе хэш-функции обозначается $\HMAC$ (\langen{Hash-based MAC})\index{HMAC} и стандартно вычисляется в виде:
     \[ \HMAC(K, m) = H(K \| H(K \| m)). \]
 
 Возможно также вычисление в виде:
@@ -41,7 +41,7 @@ $\textrm{ipad}$ -- последовательность повторяющихс
     \[ \text{\texttt{0x36}} = [00110110]_2, \]
 которые инвертируют половину битов ключа. Считается, что использование различных значений ключа повышает криптостойкость.
 
-В протоколе защищённой связи SSL/TLS\index{протокол!SSL/TLS}, используемом в интернете для инкапсуляции протокола HTTP\index{протокол!HTTP} в протокол SSL (HTTPS\index{протокол!HTTPS}), код $\HMAC$ определяется почти так же, как в IPsec. Отличие состоит в том, что вместо операции XOR для последовательностей $\textrm{ipad}$ и $\textrm{opad}$ осуществляется конкатенация:
+В протоколе защищённой связи SSL/TLS\index{протокол!SSL/TLS}, используемом в интернете для инкапсуляции, в том числе, протокола HTTP\index{протокол!HTTP} в протокол HTTPS\index{протокол!HTTPS}, код $\HMAC$ определяется почти так же, как в IPsec. Отличие состоит в том, что вместо операции XOR для последовательностей $\textrm{ipad}$ и $\textrm{opad}$ осуществляется конкатенация:
     \[ \HMAC(K, m) = H((K ~\|~ \textrm{opad}) ~\|~ H((K ~\|~ \textrm{ipad}) ~\|~ m)). \]
 
 Двойное хэширование\index{двойное хэширование} с ключом в
