--- a/hash-functions/mac/index.tex
+++ b/hash-functions/mac/index.tex
@@ -4,18 +4,18 @@
 
 Для обеспечения целостности и подтверждения авторства информации, передаваемой по каналу связи, используют \emph{имитовставку} $\MAC$ (\langen{Message Authentication Code}).
 
-\begin{displayquote}
+\begin{displayquote}\begin{sloppypar}
 Имитовставка, код аутентичности сообщения (\langen{message authentication code, seal, integrity check value}) —  в  протоколах аутентификации сообщений с доверяющими друг другу участниками — специальный набор символов, добавляемый к сообщению и предназначенный для обеспечения его целостности и аутентификации источника данных.
 \begin{flushright}Словарь криптографических терминов~\cite{Pogorelov:Sachkov:2006}
 \end{flushright}
-\end{displayquote}
+\end{sloppypar}\end{displayquote}
 
 Далее под имитовставкой мы будем понимать некоторую ключевую функцию (класс функций) $\MAC(K,m)$\[
     \textrm{MAC}: \{0,1\}^{|K|} \times \{0,1\}^* \to \{0,1\}^{|MAC|},
-\] зависящую от передаваемого сообщения $m$ и некоторого ключа $K$ отправителя $A$, обеспечивающую свойство аутентификации сообщения:
+\] зависящую от передаваемого сообщения $m$ и некоторого ключа $K$ отправителя $A$, обеспечивающую свойства аутентификации сообщения:
 \begin{itemize}
-    \item получатель $B$, используя такой же или другой связанный ключ, имеет возможность проверить целостность\index{целостность} и доказать принадлежность информации участнику, знающему ключ $K$\footnote{В случае использования симметричной криптографии участник $B$ знает секретный ключ $K$ и доказать авторство отправителя $A$ он может только самому себе. При попытке доказать другому участнику оригинальный отправитель $A$ может отрицать авторство сообщения и настаивать, что имитовставку сгенерировал получатель $B$, так как он тоже знает секретный ключ $K$.};
-    \item криптоаналитик не может (за обозримое время или же в принципе) сфальсифицировать значение имитовставки, а именно сгенерировать новое сообщение или модифицировать старое таким образом, чтобы получатель $B$ некорректно принял сообщение как от отправителя $A$ с вероятностью, больше заданной.
+    \item {[}свойство корректности{]} получатель $B$, используя такой же или другой связанный ключ, имеет возможность проверить целостность\index{целостность} и доказать принадлежность информации участнику, знающему ключ $K$\footnote{В случае использования симметричной криптографии участник $B$ знает секретный ключ $K$ и доказать авторство отправителя $A$ он может только самому себе. При попытке доказать другому участнику оригинальный отправитель $A$ может отрицать авторство сообщения и настаивать, что имитовставку сгенерировал получатель $B$, так как он тоже знает секретный ключ $K$.};
+    \item {[}свойство надёжности{]} злоумышленник (криптоаналитик) не может (за обозримое время или же в принципе) сфальсифицировать значение имитовставки, то есть сгенерировать новое сообщение или модифицировать старое таким образом, чтобы получатель $B$ некорректно принял сообщение как от отправителя $A$ с вероятностью, больше заданной.
 \end{itemize}
 
 Имитовставка может быть построена либо на симметричной криптосистеме (в таком случае обе стороны имеют один общий секретный ключ), либо на криптосистеме с открытым ключом, в которой $A$ использует свой секретный ключ, а $B$ -- открытый ключ отправителя $A$.
