--- a/hash-functions/mac/wcmac.tex
+++ b/hash-functions/mac/wcmac.tex
@@ -5,10 +5,10 @@
 
 \begin{itemize}
     \item параметра $k_1$, задающего способ выбора функции из универсального класса хэширования $H: K \times A \to B$;
-    \item параметра $k_2$, который представлял собой \emph{последовательность} строк $b_1, b_2, \dots, b_n$.
+    \item параметра $k_2$, который является \emph{последовательностью} строк $b_1, b_2, \dots, b_n$, длина каждой из которых совпадает с размером элементов множества $B$.
 \end{itemize}
 
-Размер элемента множества $B$ и каждой из строк $b_1, b_2, \dots, b_n$ совпадают. Результатом вычисления имитовставки является:
+Результатом вычисления имитовставки является:
 
 \[ \begin{array}{l}
     m' = \langle i, m \rangle,\\
@@ -17,7 +17,7 @@
 
 Авторы показали надёжность данной схемы при условии случайного выбора ключей и универсальности класса хэширования. Однако с практической точки зрения использовать ключи, состоящие из \emph{последовательностей} очень непрактично. Более того, можно было передать столько сообщений, сколько элементов последовательности задано в $k_2$. Для передачи сообщения сверх этого лимита нужно было либо расширить существующий ключ, либо сгенерировать новый.
 
-Поэтому сейчас вместо использования последовательности строк $b_1, b_2, \dots, b_n$ в качестве ключа предполагается наличие некоторого класса псевдослучайных функций (\langen{pseudorandom function family, PRF}), который эмулирует \emph{случайного оракула}\index{оракул!случайный}. В своей идеализированной модели он для каждого некоторого входа может выдать ответ, случайно распределённой по области значений. Однако если на вход случайного оракула будет подано уже ранее подававшееся значение, он должен выдать прежний ответ. Входом этого оракула являются, во-первых, некоторое случайное число $r$, которое заменило собой номер сообщения, во-вторых часть общего секретного ключа $k_2$, которая будет служить для выбора конкретной функции из класса псевдослучайных.
+По этой причине сейчас вместо использования последовательности строк $b_1, b_2, \dots, b_n$ в качестве ключа предполагается наличие некоторого класса псевдослучайных функций (\langen{pseudorandom function family, PRF}), который эмулирует \emph{случайного оракула}\index{оракул!случайный}. В своей идеализированной модели он для каждого некоторого входа может выдать ответ, случайно распределённой по области значений. Однако если на вход случайного оракула будет подано уже ранее подававшееся значение, он должен выдать прежний ответ. Входом этого оракула являются, во-первых, некоторое случайное число $r$, которое заменило собой номер сообщения, во-вторых часть общего секретного ключа $k_2$, которая будет служить для выбора конкретной функции из класса псевдослучайных.
 
 В качестве практической реализации такого класса функций могут, с некоторым приближением, выступать другие реализации имитовставок, даже если они медленно работают. Например, основанные на криптографических хэш-функциях или блочных шифрах. Потому что им на вход (в отличие от быстрой функции универсального хэширования) подаётся только небольшой блок информации -- случайное число $r$.
 
