--- a/hash-functions/when_not_to_hash.tex
+++ b/hash-functions/when_not_to_hash.tex
@@ -7,7 +7,7 @@
 
 Но есть важный набор случаев, когда несмотря на надёжность хеш-функции восстановление прообраза или даже исходного текста не представляет проблемы. Это случай, когда использовать хеш-функцию бессмысленно. Это случай, когда \emph{количество вариантов исходного текста поддаётся перебору}.
 
-Пример: \emph{номер телефона}. Разных номеров телефона с префиксом <<+7>> и 10 цифрами составляет $10^{10} \approx 2^{33}$. Современные устройства, оптимизированные для перебора значений хеш-функций перебирают миллионы хешей в секунду. Значит подсчёт значений хеш-функций для всех возможных номеров телефонов с префиксом составит не более нескольких секунд.
+Пример: \emph{номер телефона}. Разных номеров телефона с префиксом <<+7>> и 10 цифрами составляет $10^{10} \approx 2^{33}$. Современные вычислительные устройства, оптимизированные для перебора значений хеш-функций перебирают миллионы хешей в секунду. Значит подсчёт значений хеш-функций для всех возможных номеров телефонов с префиксом составит не более нескольких секунд.
 
 Пример: \emph{номер кредитной карты} (PAN, \langen{payment card number}). Часто номер карты маскируют, открывая первые 4 (6) и/или последние 4 цифры, а остальные скрывая. Всего цифр на карте 16. Можно ли хешировать номера карт с целью скрыть их от злоумышленника? Нет. Если злоумышленник получил 8 цифр из 16 (первые 4 и последние 4), а также значение хеш-функции от полного номера карты, то восстановить полный номер он сможет менее чем за секунду. Для этого ему потребуется перебрать всего $10^{8} \approx 2^{26}$ вариантов номера.
 
@@ -21,6 +21,6 @@
 
 \begin{itemize}
     \item Хешировать не сами значения, а конкатенацию исходного значения и некоторого секрета, который хранится отдельно. Например, не в таблице базы данных (вместе со значениями хеш-функций), а в конфигурации сервера приложений. С аналогичным успехом вместо хеширования можно использовать функцию блочного шифрования на некотором секретном ключе.
-    \item Использовать такие хеш-функции, которые являются не только надёжными, но и медленными в вычислении. Как для криптоаналитика, так и для легального пользователя. Примером таких функций являются PBKDF2, bcrypt, scrypt, Argon2, для которых при вызове функции мы дополнительно указываем количество итераций хеширования. Однако если увеличение длины выхода хеш-функции всего на один бит (из 256 или 512) увеличивает сложность атаки криптоаналитика на двоичный порядок (в два раза), то увеличение количества итераций для хеш-функции PBKDF2 в два раза увеличит сложность атак также только в два раза. То есть получение значения хеш-функции даже легальным пользователем становится затратно с точки зрения вычислительных ресурсов и затраченной энергии.
+    \item Использовать такие криптографические хеш-функции, которые являются не только надёжными, но и медленными в вычислении. Как для криптоаналитика, так и для легального пользователя. Примером таких функций являются \foreignlanguage{english}{PBKDF2, bcrypt, scrypt, Argon2}, для которых при вызове функции мы дополнительно указываем количество итераций хеширования. Однако если увеличение длины выхода хеш-функции всего на один бит (из 256 или 512) увеличивает сложность атаки криптоаналитика на двоичный порядок (в два раза), то увеличение количества итераций для хеш-функции PBKDF2 в два раза увеличит сложность атак также только в два раза. То есть получение значения хеш-функции даже легальным пользователем становится затратно с точки зрения вычислительных ресурсов и затраченной энергии.
 \end{itemize}
 
